--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
     <h3>Revision 7</h3>
     <ul>
       <li>Merged with AutoHotkey v.1.0.48.03_L30 </li>
-      <li>created AutoHotkey_N.exe with addFile() </li>
+      <li>created <a href="AutoHotkey_N.exe">AutoHotkey_N.exe</a> with addFile() </li>
     </ul>
     <h3>Revision 6</h3>
     <ul>
@@ -51,7 +51,7 @@
     <h3>Revision 4</h3>
     <ul>
       <li>V0.4 parse a line containing an ahk command or expression  </li>
-      <li>linePointer := int createLine(char *line, int actiontype) </li>
+      <li>linePointer := int createLine(char *line, int actiontype) removed in R7 </li>
     </ul>
     <h3>Revision 3</h3>
     <ul>
