--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,10 @@
 	<li>Partial support for <a href="http://github.com/tinku99/ahkdll.git/Test/testThreads/">multithreading</a><br>by loading multiple copies of the dll under different names</li>
 	<li>Direct access to built in variables <a href="http://github.com/tinku99/ahkdll.git/Test/commands/">BIV</a></li>
       </ul>
-<p>Download: binary <a href="http://www.autohotkey.net/%7Etinku99/ahkdll/AutoHotkey.dll">ahkdll</a>, <a href="AutoHotkey_N.exe">AutoHotkey_N.exe</a> <a href="http://github.com/tinku99/ahkdll/tree/master">source</a></p>
-<p>based on Chris' main branch: <a href="http://www.autohotkey.net/%7Etinku99/ahkdll/ahkdllcn/ahkdllcn.zip">ahkdllcn.zip</a> <a href="http://github.com/tinku99/ahkdll/tree/ahkcndll-483N8">source</a></p>
+<p>Download: </p><ul>
+<li>based on Lexikos' V1.0.48.3L30: <a href="http://www.autohotkey.net/%7Etinku99/ahkdll/release/AutoHotkeyC48L30N8.zip">AutoHotkey48L30N8.zip</a>, <a href="http://github.com/tinku99/ahkdll/tree/master">source</a></li>
+<li>based on Chris' main branch: V1.0.48.3<a href="http://www.autohotkey.net/%7Etinku99/ahkdll/release/AutoHotkeyC48N8.zip">AutoHotkeyC48N8.zip</a> <a href="http://github.com/tinku99/ahkdll/tree/ahkcndll-483N8">source</a></li>
+<li>based on AutoHotkeyV1.0.46L13 <a href="http://www.autohotkey.net/~tinku99/ahkdll/release/AutoHotkeyL13N6.zip">AutoHotkeyL13N6.zip</a> <a href="http://github.com/tinku99/ahkdll/tree/http://github.com/tinku99/ahkdll/tree/ahk46L13N6">source</a></li></ul
 
       <p>For a full list of changes, see <a href="#Version_History">Version History</a>.</p>
       <p>Discuss AutoHotkey_N at the <a href="http://www.autohotkey.com/forum/viewtopic.php?t=43049&amp;highlight=ahkdll">AutoHotkey Community Forums</a>.</p>
