--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 <ul>
 	<li>Embed the autohotkey interpreter in another program such as <a href="http://github.com/tinku99/ahkdll.git/Test/python/">python</a> or <a href="http://www.ahklisp.com">lisp</a><br>int ahkdll(char *fileName, char *option, char *parameter)</li>
 	<li>dynamically add #include type files to a running script with <a href="http://github.com/tinku99/ahkdll.git/Test/AddFile/">addfile()</a><br>_declspec(dllexport) int addFile(str file, uchar aAllowDuplicateInclude, uchar aIgnoreLoadFailure)</li>
-<li>import new scripts or replace loaded script with import(file...) </li>
+<li>import new scripts or replace loaded script with <a href="functions/import.htm">import(file...)</a> </li>
 	<li><a href="http://github.com/tinku99/ahkdll.git/Test/testThreads/">Multithreading</a><br>by loading multiple copies of the dll under different names.  Also, see HotkeyIt's <a href="http://www.autohotkey.com/forum/viewtopic.php?t=47347>work</a></li>
 	<li>Direct access to built in variables <a href="http://github.com/tinku99/ahkdll.git/Test/commands/">BIV</a></li>
       <li> make application / webserver frameworks possibe using apache modules such as <a href="http://www.autohotkey.com/forum/viewtopic.php?p=288980">modpython</a> </li>
