--- a/www/functions/import.htm
+++ b/www/functions/import.htm
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<h1>Import() <span class="small65">[AutoHotkey_NL30N7+]</span></h1>
+<h1>Import() <span class="small65">[AutoHotkey.dll or AutoHotkey_NL30N7+]</span></h1>
 <hr size="2">
 <p>loads and compiles additional script files dynamically</p>
 
