--- a/www/functions/fileappend.htm
+++ b/www/functions/fileappend.htm
@@ -20,6 +20,8 @@
     <td><strong>Standard Error (stderr)</strong>: Specifying stderr for <em>Filename</em> causes <em>Text</em> to be sent to standard error (stderr). Such text can be redirected to a file
   </tr>
 </table>
+<h4>Remarks</h4>
+this is in addition to the standard features of <a href="http://www.autohotkey.com/docs/commands/FileAppend.htm">fileappend</a>
 <h4>Example</h4>
 <pre class="NoIndent">
 FileAppend, errors, stderr
