--- a/www/functions/filereadline.htm
+++ b/www/functions/filereadline.htm
@@ -24,6 +24,8 @@
     <td>should be 1 with stdin</td>
   </tr>
 </table>
+<h4>Remarks</h4>
+this is in addition to the standard features of <a href="http://www.autohotkey.com/docs/commands/FileReadline.htm">filereadline</a>
 <h2>Example</h2>
 <pre class="NoIndent">
 FileReadLine, line1, stdin, 1
