--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <span class="size110">
 <ul>
 <li>AutoHotkey.dll is a shared library for AutoHotkey and <a href="http://www.autohotkey.net/%7ELexikos/AutoHotkey_L/">AutoHotkey_L</a> maintained by <a href="http://www.autohotkey.com/forum/profile.php?mode=viewprofile&amp;u=6056">Naveen Garg</a>. <li>AutoHotkey_N is a custom build of AutoHotkey incorporating the changes introduced by the dll.</li> 
-<li>For a full list of changes, see <a href="CHANGELOG">Changelog</a></li><li>
+<li>For a full list of changes, see <a href="CHANGELOG.htm">Changelog</a></li><li>
     Discuss AutoHotkey_N at the <a href="http://www.autohotkey.com/forum/viewtopic.php?t=43049&amp;highlight=ahkdll">AutoHotkey Community Forums</a></li> 
 <li>Thanks to Chris Mallett, <a href="http://www.autohotkey.net/%7ELexikos/AutoHotkey_L/">Lexikos</a>, Titan, and the autohotkey community. </ul>        
 
@@ -40,6 +40,7 @@
 <li><a href="functions/getTokenValue.html">getTokenValue</a></li>
 <li><a href="functions/getVar.html">getVar</a></li>
 <li><a href="functions/import.htm">import</a></li>
+<li><a href="functions/numput.htm">numput</a></li>
 <li><a href="functions/static.html">static</a></li>
 </ul>
     <h2 id="Download">Download</h2></span>
