--- a/www/index.html
+++ b/www/index.html
@@ -47,8 +47,8 @@
     <span class="size110">
 
 <ul>
-<li>Latest, V9: <a href="http://www.autohotkey.net/%7Etinku99/ahkdll/release/AutoHotkeyC48L30N9.zip">AutoHotkey48L30N9.zip</a>, <a href="http://github.com/tinku99/ahkdll/tree/master">source</a></li>
-<li>V8, based on Lexikos' V1.0.48.3L30: <a href="http://www.autohotkey.net/%7Etinku99/ahkdll/release/AutoHotkeyC48L30N8.zip">AutoHotkey48L30N8.zip</a>, <a href="http://github.com/tinku99/ahkdll/tree/ahkdll-8">source</a></li>
+<li>AutoHotkey48L30N10: <a href="http://www.autohotkey.net/~tinku99/ahkdll/release/AutoHotkey_N10.zip">AutoHotkey48L30_N10.zip</a>, <a href="http://github.com/tinku99/ahkdll/tree/master">source</a></li>
+<li> <a href="http://www.autohotkey.net/%7Etinku99/ahkdll/oldversions.html">old versions</a> </li>
 <li>based on Chris' main branch: V1.0.48.3<a href="http://www.autohotkey.net/%7Etinku99/ahkdll/release/AutoHotkeyC48N8.zip">AutoHotkeyC48N8.zip</a> <a href="http://github.com/tinku99/ahkdll/tree/ahkcndll-483N8">source</a></li>
 <li>based on AutoHotkeyV1.0.46L13 <a href="http://www.autohotkey.net/~tinku99/ahkdll/release/AutoHotkeyL13N6.zip">AutoHotkeyL13N6.zip</a> <a href="http://github.com/tinku99/ahkdll/tree/http://github.com/tinku99/ahkdll/tree/ahk46L13N6">source</a></li></ul>
     </span>
